--- a/config/rbac/kubehosts_editor_role.yaml
+++ b/config/rbac/kubehosts_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: kubehosts-editor-role
 rules:
 - apiGroups:
-  - batch.gitee.com
+  - batch.github.com
   resources:
   - kubehosts
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - batch.gitee.com
+  - batch.github.com
   resources:
   - kubehosts/status
   verbs:
