--- a/config/rbac/kubehosts_viewer_role.yaml
+++ b/config/rbac/kubehosts_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: kubehosts-viewer-role
 rules:
 - apiGroups:
-  - batch.gitee.com
+  - batch.github.com
   resources:
   - kubehosts
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - batch.gitee.com
+  - batch.github.com
   resources:
   - kubehosts/status
   verbs:
